--- a/MiraclePack/app/src/main/res/layout/fragment_profile.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_profile.xml
@@ -31,8 +31,8 @@
             android:layout_margin="@dimen/_12sdp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/white"
-            android:orientation="vertical"
             android:gravity="center_horizontal"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -80,8 +80,8 @@
             android:layout_margin="@dimen/_8sdp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/houseStyleColor"
-            android:orientation="vertical"
             android:gravity="center"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/backpackViewSection"
@@ -94,44 +94,45 @@
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:gravity="center_vertical"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="@color/white"
+                android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/EmailTextView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/_4sdp"
                     android:gravity="center"
                     android:text="Email"
                     android:textColor="@color/mainTextColor"
-                    android:layout_marginStart="@dimen/_4sdp"
                     android:textSize="@dimen/_15sdp"
                     android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:gravity="center_vertical"
                 android:id="@+id/phonenumberBox"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_39sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="@color/white"
+                android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <EditText
                         android:id="@+id/phonenumberEditText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:minHeight="48dp"
                         android:hint="Telefoonnummer"
+                        android:minHeight="48dp"
                         android:textColor="@color/mainTextColor"
                         android:textSize="@dimen/_15sdp"
                         android:textStyle="bold" />
@@ -148,20 +149,21 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:gravity="center_vertical"
                 android:id="@+id/birthdateBox"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_39sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:background="@drawable/roundstyle"
                 android:backgroundTint="@color/white"
+                android:gravity="center_vertical"
                 android:orientation="vertical">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <TextView
                         android:id="@+id/birthdateTextView"
                         android:layout_width="wrap_content"
@@ -187,38 +189,36 @@
 
 
             <Button
-                android:layout_marginStart="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_10sdp"
-                android:gravity="center"
                 android:id="@+id/buttonPasswordReset"
                 android:layout_width="@dimen/_230sdp"
                 android:layout_height="@dimen/_39sdp"
-                android:backgroundTint="@color/white"
-                android:orientation="vertical"
-                android:onClick="openPasswordResetActivity"
-                android:text="Wachtwoord veranderen"
-                android:textColor="@color/mainTextColor"
-                android:textSize="@dimen/_15sdp"
-                android:textStyle="bold">
-            </Button>
-
-            <Button
-                android:id="@+id/buttonSignOut"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
+                android:backgroundTint="@color/white"
                 android:gravity="center"
+                android:onClick="openPasswordResetActivity"
+                android:orientation="vertical"
+                android:text="Wachtwoord veranderen"
+                android:textColor="@color/mainTextColor"
+                android:textSize="@dimen/_15sdp"
+                android:textStyle="bold"></Button>
+
+            <Button
+                android:id="@+id/buttonSignOut"
                 android:layout_width="@dimen/_150sdp"
                 android:layout_height="@dimen/_39sdp"
+                android:layout_marginStart="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
                 android:backgroundTint="@color/white"
-                android:orientation="vertical"
+                android:gravity="center"
                 android:onClick="openLoginFragment"
+                android:orientation="vertical"
                 android:text="Uitloggen"
                 android:textColor="@color/mainTextColor"
                 android:textSize="@dimen/_15sdp"
-                android:textStyle="bold">
-            </Button>
+                android:textStyle="bold"></Button>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
