--- a/MiraclePack/app/src/main/res/layout/activity_add.xml
+++ b/MiraclePack/app/src/main/res/layout/activity_add.xml
@@ -23,20 +23,20 @@
         android:layout_width="@dimen/_40sdp"
         android:layout_height="@dimen/_40sdp"
         android:layout_margin="@dimen/_5sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar"
-        android:src="@drawable/baseline_arrow_back_24"
         android:background="@color/houseStyleColor"
+        android:padding="@dimen/_7sdp"
         android:scaleType="fitCenter"
-        android:padding="@dimen/_7sdp"/>
+        android:src="@drawable/baseline_arrow_back_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/toolbar" />
 
     <LinearLayout
         android:id="@+id/groupContainer"
         android:layout_width="match_parent"
         android:layout_height="@dimen/_180sdp"
         android:layout_margin="@dimen/_12sdp"
-        android:backgroundTint="@color/houseStyleColor"
         android:background="@drawable/roundstyle"
+        android:backgroundTint="@color/houseStyleColor"
         android:gravity="center"
         android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
@@ -46,9 +46,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_margin="@dimen/_10sdp"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/white"
-            android:layout_margin="@dimen/_10sdp"
             android:gravity="center"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -61,9 +61,9 @@
                 android:layout_marginTop="@dimen/_8sdp"
                 android:ems="10"
                 android:hint="Voorwerp naam"
-                android:textColor="@color/black"
                 android:inputType="text"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textColor="@color/black" />
 
             <Spinner
                 android:id="@+id/compartmentNameSpinner"
