--- a/MiraclePack/app/src/main/res/layout/fragment_bag.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_bag.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,9 +8,9 @@
         android:id="@+id/weekdaySpinner"
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_marginTop="10dp"
         android:background="@color/white"
         android:textAlignment="center"
-        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,15 +21,15 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
+        android:backgroundTint="@color/houseStyleColor"
         android:clickable="true"
         android:contentDescription="Voeg nieuwe inhoud toe aan de tas"
         android:focusable="true"
-        android:backgroundTint="@color/houseStyleColor"
-        app:tint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:shapeAppearanceOverlay="@style/FloatingActionButtonShape"
         app:srcCompat="@drawable/baseline_add_24"
-        app:shapeAppearanceOverlay="@style/FloatingActionButtonShape" />
+        app:tint="@color/white" />
 
 
     <androidx.recyclerview.widget.RecyclerView
