--- a/MiraclePack/app/src/main/res/layout/fragment_loginpage.xml
+++ b/MiraclePack/app/src/main/res/layout/fragment_loginpage.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/_11sdp"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:padding="@dimen/_11sdp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -17,25 +16,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_214sdp"
+            android:autofillHints=""
             android:hint="@string/wachtwoord1"
             android:inputType="textPassword"
             android:minHeight="@dimen/_36sdp"
             app:layout_constraintEnd_toEndOf="@+id/email"
             app:layout_constraintStart_toStartOf="@+id/email"
-            app:layout_constraintTop_toTopOf="parent"
-            android:autofillHints="" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_180sdp"
+            android:autofillHints=""
             android:hint="@string/email"
             android:inputType="textEmailAddress"
             android:minHeight="@dimen/_36sdp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:autofillHints="" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <!--        inlog button-->
         <androidx.appcompat.widget.AppCompatButton
@@ -62,13 +61,13 @@
             android:layout_height="@dimen/_40sdp"
             android:layout_marginStart="@dimen/_45sdp"
             android:layout_marginTop="@dimen/_43sdp"
-            android:text="wachtwoord vergeten"
-            android:textSize="@dimen/_12sdp"
-            android:textStyle="bold"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/houseStyleColor"
-            android:textColor="@color/white"
             android:onClick="openPasswordResetFragment"
+            android:text="wachtwoord vergeten"
+            android:textColor="@color/white"
+            android:textSize="@dimen/_12sdp"
+            android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />
 
@@ -80,11 +79,11 @@
             android:layout_height="@dimen/_40sdp"
             android:layout_marginStart="@dimen/_45sdp"
             android:layout_marginTop="@dimen/_90sdp"
-            android:onClick="openSignUpActivity"
             android:background="@drawable/roundstyle"
             android:backgroundTint="@color/houseStyleColor"
-            android:textColor="@color/white"
+            android:onClick="openSignUpActivity"
             android:text="nieuw account aanmaken"
+            android:textColor="@color/white"
             android:textSize="@dimen/_12sdp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
