--- a/MiraclePack/app/src/main/res/layout/item_geofence.xml
+++ b/MiraclePack/app/src/main/res/layout/item_geofence.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="5dp"
     android:background="@drawable/location_rounded_style"
     android:gravity="center_vertical"
-    android:padding="16dp"
-    android:layout_marginBottom="5dp">
+    android:padding="16dp">
 
     <TextView
         android:id="@+id/nameTextView"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="16sp"
         android:textColor="@color/white"
+        android:textSize="16sp"
         android:textStyle="bold" />
 
     <ImageButton
