--- a/MiraclePack/app/src/main/res/values-night/themes.xml
+++ b/MiraclePack/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
     <style name="Theme.MiraclePack.Dark" parent="Base.Theme.MiraclePack">
         <item name="colorPrimary">@color/dark_primary</item>
